# recuair-cli

./: .bumpversion.cfg  .bumpversion.toml  .gitignore  CHANGELOG.rst  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test.yml
recuair_cli/: __init__.py  main.py
recuair_cli/tests/: test_main.py
recuair_cli/tests/data/: invalid.html  response-off.html  response.html  warning.html
