[build-system]
requires = ['setuptools>=61.0']
build-backend = "setuptools.build_meta"

[tool.doc8]
max-line-length = 120
allow-long-titles = true

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "recuair_cli.tests.*"
disallow_untyped_defs = false
check_untyped_defs = true

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "W", "C90", "I", "D", "S", "C", "UP", "B", "ISC", "G", "RSE"]
ignore = ["D105", "D106", "D107", "UP032", "ISC001"]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["D1", "S101", "S105", "S106", "S107", "B015", "B018"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pycodestyle]
max-doc-length = 120

[tool.ruff.lint.pydocstyle]
convention = "google"
