[metadata]
name = recuair-cli
version = 0.0.0
author = Vlastimil Zíma
author_email = vlastimil.zima@gmail.com
description = Command line interface for manipulation of Recuair devices.
long_description = file: README.rst, CHANGELOG.rst
license = GPLv3+
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Home Automation
    Typing :: Typed

[options]
zip_safe = false
packages = find:
include_package_data = true
python_requires = ~=3.8
install_requires =
    beautifulsoup4
    docopt
    requests

[options.entry_points]
console_scripts =
    recuair-cli = recuair_cli.main:main

[options.extras_require]
quality =
    bandit
    doc8
    flake8
    isort
    mypy
    pydocstyle
tests =
    responses
    testfixtures
types =
    types-requests

[doc8]
max-line-length = 120
allow-long-titles = true

[flake8]
max-line-length=120

[isort]
line_length = 120
combine_as_imports = true
default_section = THIRDPARTY
known_first_party = recuair_cli

[pydocstyle]
convention = google

[mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[mypy-recuair_cli.tests.*]
disallow_untyped_defs = false
