[metadata]
name = recuair-cli
version = 0.0.0
author = Vlastimil Zíma
author_email = vlastimil.zima@gmail.com
description = Command line interface for manipulation of Recuair devices.
long_description = file: README.rst, CHANGELOG.rst
license = GPLv3+
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Home Automation
    Typing :: Typed

[options]
zip_safe = false
packages = find:
include_package_data = true
python_requires = ~=3.9
install_requires =
    beautifulsoup4
    docopt
    httpx
    tenacity

[options.entry_points]
console_scripts =
    recuair-cli = recuair_cli.main:main

[options.extras_require]
quality =
    doc8
    mypy
    ruff
tests =
    respx
    testfixtures
